--- a/1_concepts/1_5_convert_cast_deref/Cargo.toml
+++ b/1_concepts/1_5_convert_cast_deref/Cargo.toml
@@ -3,3 +3,9 @@ name = "step_1_5"
 version = "0.1.0"
 edition = "2021"
 publish = false
+
+
+[dependencies]
+regex = "*"
+once_cell = "*"
+rand = "*"
