--- a/1_concepts/1_7_sized/Cargo.toml
+++ b/1_concepts/1_7_sized/Cargo.toml
@@ -3,3 +3,7 @@ name = "step_1_7"
 version = "0.1.0"
 edition = "2021"
 publish = false
+
+[dependencies]
+test-case = "3.3.1"
+uuid = { version = "1.7.0", features = ["v4"] }
