--- a/3_ecosystem/3_2_macro/Cargo.toml
+++ b/3_ecosystem/3_2_macro/Cargo.toml
@@ -3,3 +3,6 @@ name = "step_3_2"
 version = "0.1.0"
 edition = "2021"
 publish = false
+
+[dependencies]
+btree_proc_macro = {path = "./btree_proc_macro" }
