--- a/3_ecosystem/3_4_regex_parsing/Cargo.toml
+++ b/3_ecosystem/3_4_regex_parsing/Cargo.toml
@@ -3,3 +3,7 @@ name = "step_3_4"
 version = "0.1.0"
 edition = "2021"
 publish = false
+[dependencies]
+regex = "1.10.3"
+once_cell = { version = "1.19.0" }
+nom = "7.1.3"
