--- a/3_ecosystem/3_6_serde/Cargo.toml
+++ b/3_ecosystem/3_6_serde/Cargo.toml
@@ -3,3 +3,12 @@ name = "step_3_6"
 version = "0.1.0"
 edition = "2021"
 publish = false
+[dependencies]
+serde = { version = "1.0.197", features = ["derive"] }
+chrono = { version = "0.4.35", features = ["serde"] }
+url = { version = "2.5.0", features = ["serde"] }
+serde_json = "1.0.114"
+toml = "0.8.12"
+serde_yaml = "0.9.33"
+url_serde = "0.2.0"
+duration-str = { version = "0.7.1", features = ["serde"] }
