--- a/3_ecosystem/3_7_rand_crypto/Cargo.toml
+++ b/3_ecosystem/3_7_rand_crypto/Cargo.toml
@@ -3,3 +3,9 @@ name = "step_3_7"
 version = "0.1.0"
 edition = "2021"
 publish = false
+[dependencies]
+rand = "0.9.0-alpha.1"
+once_cell = "1.19.0"
+sha3 = "0.11.0-pre.3"
+base64ct = { version = "1.6.0", features = ["alloc"] }
+rust-argon2 = "2.1"
