--- a/3_ecosystem/3_11_async/Cargo.toml
+++ b/3_ecosystem/3_11_async/Cargo.toml
@@ -3,3 +3,11 @@ name = "step_3_11"
 version = "0.1.0"
 edition = "2021"
 publish = false
+
+[dependencies]
+clap = { version = "4.5.3", features = ["derive", "help"] }
+reqwest = "0.11.6"
+tokio = { version = "1.16.1", features = ["full"] }
+futures = "0.3.30"
+anyhow = "1.0.81"
+
