--- a/3_ecosystem/3_5_collections/Cargo.toml
+++ b/3_ecosystem/3_5_collections/Cargo.toml
@@ -4,5 +4,17 @@ version = "0.1.0"
 edition = "2021"
 publish = false
 
+[lib]
+name = "im_collections"
+path = "src/lib.rs"
+
 [dependencies]
 im = "15.1.0"
+
+[dev-dependencies]
+cucumber = "0.20.2"
+futures = "0.3.1"
+
+[[test]]
+name = "collections"
+harness = false
