--- a/4_backend/4_2_http/Cargo.toml
+++ b/4_backend/4_2_http/Cargo.toml
@@ -3,3 +3,32 @@ name = "step_4_2"
 version = "0.1.0"
 edition = "2021"
 publish = false
+
+[lib]
+path = "src/lib.rs"
+
+[dependencies]
+sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls"] }
+sea-orm = { version = "0.12", features = [
+    "sqlx-postgres",
+    "runtime-tokio-native-tls",
+    "macros",
+    "debug-print",
+    "with-json",
+] }
+clap = { version = "4.5.4", features = ["derive"] }
+smart-default = "0.7.1"
+derive = "1.0.0"
+tokio = { version = "1.37.0", features = ["full"] }
+dotenv = "0.15.0"
+anyhow = "1.0.81"
+slug = "0.1.5"
+serde_json = "1.0"
+reqwest = "0.12"
+serde = { version = "1.0.197" }
+actix-web-actors = "4"
+tokio-stream = "0.1"
+awc = "3.4.0"
+futures-util = "0.3.30"
+actix-web = "4.5.1"
+actix = "0.13"
